# Z2DEngine

./: .gitignore  CMakeLists.txt  README.md
libs/glm/: CMakeLists.txt
libs/imgui/examples/: imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_opengl3.h  imgui_impl_win32.cpp  imgui_impl_win32.h
libs/imgui/examples/example_glfw_opengl2/: main.cpp
libs/imgui/examples/example_glfw_opengl3/: main.cpp
libs/imgui/examples/example_glfw_vulkan/: main.cpp
libs/imgui/examples/example_sdl_metal/: example_sdl_metal
shaders/: sprite.frag  texture.frag
src/: Constants.h  Engine.cpp  Engine.h  EntityWindow.cpp  EntityWindow.h  Game.cpp  Game.h  ResourceWindow.cpp  ResourceWindow.h  TextureWindow.cpp  TextureWindow.h  main.cpp
src/Game/: AssetManager.cpp  AssetManager.h  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureManager.cpp  TextureManager.h
src/Game/Components/: SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
